Fix reply button in comment being to big in mobile. Fixed dark mode comentary box was black with white text. Now it's white with black text like in light mode. Changed the items in menu board. Now they are all black always. Before it would give the idea that the button was off.

--- a/src/components/comment/Comment.css
+++ b/src/components/comment/Comment.css
@@ -107,6 +107,10 @@
   .commentTime {
     min-width: 50px;
   }
+
+  .replyButton {
+    font-size: 10px;
+  }
 }
 
 
